Refactor project structure

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <modules>
         <module>core-lib</module>
-        <module>ui</module>
+        <module>game</module>
     </modules>
 
     <dependencyManagement>
